--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Themes/DataGrid/DataGridColumnHeaderTheme.xaml"/>
                 <ResourceDictionary Source="Themes/Button/ButtonConflictWindowSliderTheme.xaml"/>
                 <ResourceDictionary Source="Themes/UI/DeploymentReminder.xaml"/>
+                <ResourceDictionary Source="Themes/Button/MenuItemContextTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
