Many changes from layout to functionalities

--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="Themes/Button/ButtonConflictWindowSliderTheme.xaml"/>
                 <ResourceDictionary Source="Themes/UI/DeploymentReminder.xaml"/>
                 <ResourceDictionary Source="Themes/Button/MenuItemContextTheme.xaml"/>
+                <ResourceDictionary Source="Themes/Button/ButtonAddModTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
