--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
@@ -51,12 +51,12 @@
                 <Setter Property="Background" Value="#FFF5F5F5"/>
                 <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
             </Trigger>
-            <DataTrigger Binding="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" Value="True">
+            <Trigger Property="Selector.IsSelectionActive" Value="True">
                 <Setter Property="IsSelected" Value="True"/>
-            </DataTrigger>
-            <DataTrigger Binding="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" Value="False">
+            </Trigger>
+            <Trigger Property="Selector.IsSelectionActive" Value="False">
                 <Setter Property="IsSelected" Value="False"/>
-            </DataTrigger>
+            </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
                     <Condition Property="IsSelected" Value="True"/>
