--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -263,7 +263,7 @@
                                   Style="{DynamicResource DataGridStyle1}" 
                                   CellStyle="{DynamicResource DataGridCellStyle1}" 
                                   ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                  RowStyle="{DynamicResource DataGridRowStyle1}" 
+                                  RowStyle="{DynamicResource DataGridConflictRowStyle1}" 
                                   Margin="10" 
                                   Background="Transparent" 
                                   BorderBrush="Transparent"
@@ -288,7 +288,7 @@
                                   Style="{DynamicResource DataGridStyle1}" 
                                   CellStyle="{DynamicResource DataGridCellStyle1}" 
                                   ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                  RowStyle="{DynamicResource DataGridRowStyle1}" 
+                                  RowStyle="{DynamicResource DataGridConflictRowStyle1}" 
                                   Margin="10" 
                                   Background="Transparent" 
                                   BorderBrush="Transparent"
@@ -312,7 +312,7 @@
                                   Style="{DynamicResource DataGridStyle1}" 
                                   CellStyle="{DynamicResource DataGridCellStyle1}" 
                                   ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                  RowStyle="{DynamicResource DataGridRowStyle1}" 
+                                  RowStyle="{DynamicResource DataGridConflictRowStyle1}" 
                                   Margin="10" 
                                   Background="Transparent" 
                                   BorderBrush="Transparent">
