--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridConflictRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridConflictRowTheme.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MW5_Mod_Organizer_WPF.Models">
-    <Style x:Key="DataGridRowStyle1" TargetType="{x:Type DataGridRow}">
+    <Style x:Key="DataGridConflictRowStyle1" TargetType="{x:Type DataGridRow}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="#141414"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -9,7 +9,6 @@
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="IsSelected" Value="{Binding Path=IsSelected, Mode=TwoWay}"/>
         <Setter Property="ValidationErrorTemplate">
             <Setter.Value>
                 <ControlTemplate>
