--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
@@ -9,7 +9,7 @@
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="IsSelected" Value="{Binding Path=IsSelected, Mode=TwoWay}"/>
+        <Setter Property="IsSelected" Value="{Binding Path=IsSelected}"/>
         <Setter Property="ValidationErrorTemplate">
             <Setter.Value>
                 <ControlTemplate>
@@ -52,13 +52,13 @@
                 <Setter Property="Background" Value="#FFF5F5F5"/>
                 <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
             </Trigger>
-            <MultiTrigger>
+            <!--<MultiTrigger>
                 <MultiTrigger.Conditions>
                     <Condition Property="IsSelected" Value="True"/>
                     <Condition Property="Selector.IsSelectionActive" Value="False"/>
                 </MultiTrigger.Conditions>
                 <Setter Property="Background" Value="#dfdfdf"/>
-            </MultiTrigger>
+            </MultiTrigger>-->
             <DataTrigger Binding="{Binding ModViewModelStatus}" Value="Overwrites">
                 <Setter Property="BorderBrush" Value="Red"/>
                 <Setter Property="Background" Value="#FFFFBDBD"/>
