--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -492,11 +492,12 @@
                 </MenuItem>
             </Menu>
         </StackPanel>
-        <Button Grid.Row="0" 
+        <Button Content="Update available!"
+                Grid.Row="0"
                 Grid.Column="0" 
                 Grid.ColumnSpan="3"
                 HorizontalAlignment="Right"
-                Content="Update available!"/>
+                Command="{Binding VisitOnNexusCommand}"/>
     </Grid>
 </Window>
     
