--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonUpdateAvailableTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonUpdateAvailableTheme.xaml
@@ -1,4 +1,53 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Background" Value="#8e8e8e"/>
+            <Setter Property="BorderBrush" Value="#777777"/>
+            <Setter Property="BorderThickness" Value="0 0 2 3"/>
+            <Setter Property="Foreground" Value="#E2E0DD"/>
+            <Setter Property="Padding" Value="10 0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid Margin="5"
+                              VerticalAlignment="Stretch"
+                              HorizontalAlignment="Stretch"
+                              Height="25">
+                            <Border Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Padding="{TemplateBinding Padding}">
+                                <TextBlock Text="{TemplateBinding Content}"
+                                           FontWeight="SemiBold"
+                                           TextOptions.TextFormattingMode="Display"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#ED552F"/>
+                <Setter Property="BorderBrush" Value="#C74828"/>
+                <Setter Property="Foreground" Value="#FFFDFA"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="#782B18"/>
+                <Setter Property="BorderBrush" Value="#782B18"/>
+                <Setter Property="Foreground" Value="#FFFDFA"/>
+                <Setter Property="Padding" Value="10 3 10 0"/>
+            </Trigger>
+            <DataTrigger Binding="{Binding IsUpdateAvailable}" Value="True">
+                <Setter Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding IsUpdateAvailable}" Value="False">
+                <Setter Property="Visibility" Value="Hidden"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
